tests red with mongo backend
