# api-spec.yaml
@@ -54,9 +54,9 @@ paths:
                 200:
                     description: "successful operation"
                     schema:
-                        type: "array"
-                        items:
-                            $ref: "#/definitions/Scenario"
+                        type: object
+                        schema:
+                            $ref: "#/definitions/Scenarios"
 
         post:
             summary: request a new scenario
@@ -67,8 +67,14 @@ paths:
             parameters:
                 - name: vegetation_updates
                   type: object
+                  description: list of 
+                  in: body
                   schema:
-                      $ref: "#/definitions/VegetationUpdate"
+                      $ref: "#/definitions/VegetationUpdates"
+                - name: name
+                  type: string
+                  description: descriptive name for the scenario
+                  in: body
                       
 
             responses:
@@ -90,30 +96,6 @@ paths:
                   required: true
                   type: string
 
-
-            responses:
-                200:
-                    description: "successful operation"
-                    schema:
-                        $ref: "#/definitions/Scenario" 
-
-        put:
-            summary: lookup a scenario by its id
-            tags:
-                - scenarios
-            operationId: getScenario
-
-            parameters:
-                - name: scenarioId
-                  in: path
-                  required: true
-                  type: string
-
-                - name: name
-                  in: body
-                  required: false
-                  type: string
-                  description: update scenario name
 
             responses:
                 200:
@@ -240,23 +222,23 @@ definitions:
 
     VegMapByHRU:
         properties:
-            0:
+            bare_ground:
                 type: object
                 schema:
                     $ref: '#/definitions/CellsByVegType'
-            1:
+            grasses:
                 type: object
                 schema:
                     $ref: '#/definitions/CellsByVegType'
-            2:
+            shrubs:
                 type: object
                 schema:
                     $ref: '#/definitions/CellsByVegType'
-            3:
+            trees:
                 type: object
                 schema:
                     $ref: '#/definitions/CellsByVegType'
-            4:
+            conifers:
                 type: object
                 schema:
                     $ref: '#/definitions/CellsByVegType'
@@ -277,3 +259,23 @@ definitions:
                 type: array
                 items:
                     type: integer
+
+    VegetationUpdates:
+        properties:
+            vegetation_updates:
+                type: array
+                items:
+                    type: object
+                    schema:
+                        $ref: '#/definitions/VegetationUpdate'
+
+    Scenarios:
+        properties:
+            scenarios:
+                type: array
+                items:
+                    type: object
+                    schema:
+                        $ref: '#/definitions/Scenario'
+
+
